--- a/src/page/classDetail/index.module.css
+++ b/src/page/classDetail/index.module.css
@@ -2,5 +2,155 @@
     width:100%;
     height: calc(100% - 60px);
     margin-top: 60px;
-    background-color: gainsboro;
+    padding-top: 20px;
+}
+
+.header {
+    width: 1300px;
+    height: 280px;
+    margin: auto;
+}
+
+.headerTop {
+    width: 100%;
+    height: 200px;
+    background-image: url("../../img/courseBg/detailClassBg.png");
+    background-size: 100% 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.headerBottom {
+
+}
+
+.content {
+    width: 1300px;
+    margin: auto;
+    /*border: 1px solid #000000;*/
+    height:40px;
+    margin-bottom: 20px;
+}
+
+.sort {
+    margin-left: 70%;
+    color: #4285f4;
+    cursor: pointer;
+}
+
+.sortImg {
+    width:18px;
+    position: relative;
+    top:3px;
+    margin-right: 5px;
+}
+
+.action {
+    margin-left: 30px;
+}
+
+.topLeft {
+    position: relative;
+    top:10%;
+    margin-left: 5%;
+    width:40%;
+    height:80%;
+    border: 1px solid black;
+    display: inline-block;
+}
+
+.topRight {
+    position: relative;
+    top:10%;
+    margin-left: 10%;
+    width:40%;
+    height:80%;
+    border: 1px solid black;
+    display: inline-block;
+}
+
+.addWork {
+    margin-left: 30px;
+    border-radius: 20px;
+    border: none;
+    width:120px;
+    height:40px;
+    background-color: #00cc8d;
+    color:white;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.addWork:hover {
+    background-color: #01e59e;
+}
+
+.sortType {
+    width: 200px;
+}
+
+.tables {
+    width: 1300px;
+    margin: auto;
+}
+
+.overCourse {
+    --dialog-body-max-height: 550.909px;
+    -webkit-font-smoothing: antialiased;
+    list-style: none none;
+    font: inherit;
+    font-weight: 400;
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    color: #5f6368;
+    font-size: 12px;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.vertical {
+    --dialog-body-max-height: 550.909px;
+    -webkit-font-smoothing: antialiased;
+    list-style: none;
+    list-style-type: none;
+    color: #5f6368;
+    box-sizing: border-box;
+    padding: 0;
+    border: 0;
+    outline: none;
+    font: inherit;
+    font-weight: 400;
+    font-family: Roboto,Helvetica,Arial,sans-serif;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    background-color: #dadce0;
+    display: inline-block;
+    width: 1px;
+    height: 1em;
+    margin: 0 8px;
+    vertical-align: middle;
+    position: relative;
+}
+
+.tdDiv {
+    text-align: center;
+}
+
+.workName {
+    font-size: 20px;
+}
+
+.fontColor {
+    color: #4285f4;
+    font-size: 20px;
+}
+
+.ptText {
+    font-size: 12px;
+    color: #202124
+}
+
+.ellipsis {
+    width: 15px;
+    position: relative;
+    top:6px;
 }
